# train

./: .gitignore  README.md  pyproject.toml
src/train/: __init__.py  dataset.py  predict.py  train.py  yolo.py
src/train/regressor/: __init__.py  dataset.py  model.py  predict.py  train.py
